--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
+    "objects-to-csv": "^1.3.5",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
